[package]
name = "ws-relay-core"
version = "0.2.0"
edition = "2021"
description = "高性能 WebSocket + REST 中继代理"

[dependencies]
# 异步运行时
tokio = { version = "1.43", features = ["full"] }

# Web 框架
axum = { version = "0.8", features = ["ws"] }

# HTTP 客户端（REST 代理）
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# 序列化
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具
anyhow = "1"
once_cell = "1"
percent-encoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
